# SecurityNexus

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  MILESTONE-2-PLAN.md  MILESTONE_2_PLAN.md  PLAN.md  README.md  ROADMAP.md  USER_STORIES.md  chain_config.json  cleanup.sh  docker-compose.db.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  possible_improovements.txt  run-demo.sh  turbo.json
.github/workflows/: build-and-push.yml  ci.yml  deploy.yml
docs/: IMPLEMENTATION.md  QUICKSTART.md
docs/planning/: ENDPOINT_SWITCHER_ROADMAP.md  MILESTONE_2.md  USER_STORIES.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/reputation/: Cargo.toml
pallets/reputation/src/: lib.rs
pallets/security-registry/: Cargo.toml
pallets/security-registry/src/: lib.rs
presentations/: README.md  finalist-presentation.html  pitch-3min.html  security-nexus-video-pitch.html
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: health-check.sh  setup-server.sh
scripts/ssl/: generate-self-signed.sh  setup-letsencrypt.sh
test-samples/: README.md  vulnerable_xcm_transfer.rs
test-samples/vulnerable-pallets/: defi_vault.rs  incorrect_weights.rs  insecure_randomness.rs  replay_attack.rs  transactional_missing.rs  unsafe_storage.rs
