[workspace]
members = [
    "packages/saft-enhanced",
    "packages/monitoring-engine",
    "packages/privacy-layer",
    "packages/hyperbridge-integration",
    "packages/hydration-module/rust",
    "pallets/security-registry",
    "pallets/reputation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Juan Ignacio Raggio & Victoria Park"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JuaniRaggio/SecurityNexus.git"

[workspace.dependencies]
# Substrate & Polkadot
frame-support = { version = "36.0.0", default-features = false }
frame-system = { version = "36.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
pallet-balances = { version = "37.0.0", default-features = false }

# Polkadot API
subxt = "0.35"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework & HTTP
actix-web = "4.4"
actix-cors = "0.7"
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ZK Proofs
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"

# Rust parsing for static analysis
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# Database
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
redis = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Testing
mockall = "0.12"
pretty_assertions = "1.4"

# Cryptography
blake2 = "0.10"
sha2 = "0.10"
hex = "0.4"

# WebSocket
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
lazy_static = "1.4"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
