[package]
name = "pallet-security-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
pallet-balances.workspace = true

serde.workspace = true

[dev-dependencies]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
